--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,9 @@
 ## Build tool auxiliary files:
 *.fdb_latexmk
 *.synctex
-*.synctex(busy)
+*.synctex\(busy\)
 *.synctex.gz
-*.synctex.gz(busy)
+*.synctex.gz\(busy\)
 *.pdfsync
 
 ## Build tool directories for auxiliary files
@@ -274,3 +274,16 @@ TSWLatexianTemp*
 
 # Makeindex log files
 *.lpz
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
